ffi/poc/cpp/corpus/include/ak_abi.h

typedef struct ak_dec_ctx ak_dec_ctx;
typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t * *dst, int32_t *cap);
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
struct ak_unk_opts {
  struct ak_unk_buf buf;
  ak_grow_fn grow;
};
typedef struct ak_unk_opts ak_unk_opts;
struct ak_unk_pool {
  struct ak_unk_buf *bufs;
  uint32_t n;
  ak_grow_fn grow;
};
typedef struct ak_unk_pool ak_unk_pool;
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkElementAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_SurrogateAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ListMetricsResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_DualResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkLeaf {
  struct ak_span k;
  int32_t v;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkInner {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkElement {
  struct ak_span id;
  struct ak_dfix_ChunkInner inner;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkedResponse {
  int32_t page;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_ChunkedResponseWide {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_LeafElement {
  struct ak_span id;
  int64_t n;
  struct ak_dfix_Timestamp stamp;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_LeafResponse {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_Surrogate {
  struct ak_span text;
  struct ak_dfix_SurrogateInner nested;
  struct ak_span raw;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dfix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_span v_string;
  struct ak_span v_bytes;
  int32_t v_enum;
  struct ak_dfix_Timestamp v_msg;
  int32_t v_big_tag;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
struct ak_dvt_ListMetricsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListMetricsResponse *);
  int64_t (*new_batches)(ak_dec_ctx *, void *);
  void (*apply_batches)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_MetricsBatch *);
  void (*add_batches_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_batches_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_batches_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_batches_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_batches_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
struct ak_evt_UploadResultDataMessage {
  const void *_reserved;  
};
struct ak_dvt_UploadResultDataMessage {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultDataMessage *);
};
struct ak_evt_DualResponse {
  ak_loop_f loop_left;
  ak_loop_f loop_right;
};
struct ak_dvt_DualResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_DualResponse *);
  void (*add_left)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
  void (*add_right)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
};
struct ak_evt_ChunkLeaf {
  const void *_reserved;  
};
struct ak_dvt_ChunkLeaf {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkLeaf *);
};
struct ak_evt_ChunkInner {
  ak_loop_f loop_marks;
  ak_loop_f loop_leaves;
};
struct ak_dvt_ChunkInner {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkInner *);
  void (*add_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
struct ak_evt_ChunkElement {
  ak_loop_f loop_labels;
  ak_loop_f loop_attrs;
  ak_loop_f loop_inner_marks;
  ak_loop_f loop_inner_leaves;
};
struct ak_dvt_ChunkElement {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkElement *);
  void (*add_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
struct ak_evt_ChunkedResponse {
  ak_loop_f loop_items;
  const struct ak_evt_ChunkElement *elem_items;
};
struct ak_dvt_ChunkedResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkedResponse *);
  int64_t (*new_items)(ak_dec_ctx *, void *);
  void (*apply_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElement *);
  void (*add_items_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_items_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_items_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_items_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
struct ak_evt_ChunkedResponseWide {
  ak_loop_f loop_items;
  const struct ak_evt_ChunkElement *elem_items;
};
struct ak_dvt_ChunkedResponseWide {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkedResponseWide *);
  int64_t (*new_items)(ak_dec_ctx *, void *);
  void (*apply_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElement *);
  void (*add_items_labels)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_items_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkElementAttrsEntry *, int32_t);
  void (*add_items_inner_marks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_items_inner_leaves)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ChunkLeaf *, int32_t);
};
struct ak_evt_LeafElement {
  const void *_reserved;  
};
struct ak_dvt_LeafElement {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_LeafElement *);
};
struct ak_evt_LeafResponse {
  ak_loop_f loop_items;
};
struct ak_dvt_LeafResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_LeafResponse *);
  void (*add_items)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_LeafElement *, int32_t);
};
struct ak_evt_Surrogate {
  ak_loop_f loop_attrs;
  ak_loop_f loop_texts;
};
struct ak_dvt_Surrogate {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Surrogate *);
  void (*add_attrs)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_SurrogateAttrsEntry *, int32_t);
  void (*add_texts)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
};
struct ak_evt_SurrogateInner {
  const void *_reserved;  
};
struct ak_dvt_SurrogateInner {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_SurrogateInner *);
};
struct ak_evt_WireZoo {
  const void *_reserved;  
};
struct ak_dvt_WireZoo {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_WireZoo *);
};
struct ak_evt_TaskOptionsOptionsEntry {
  const void *_reserved;  
};
struct ak_dvt_TaskOptionsOptionsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptionsOptionsEntry *);
};
struct ak_evt_ChunkElementAttrsEntry {
  const void *_reserved;  
};
struct ak_dvt_ChunkElementAttrsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkElementAttrsEntry *);
};
struct ak_evt_SurrogateAttrsEntry {
  const void *_reserved;  
};
struct ak_dvt_SurrogateAttrsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_SurrogateAttrsEntry *);
};
struct ak_dec_Timestamp_opts {
  void *host;
  struct ak_unk_opts self;  
};
struct ak_dec_Duration_opts {
  void *host;
  struct ak_unk_opts self;  
};
struct ak_dec_ResultRaw_opts {
  void *host;
  struct ak_unk_opts self;  
  struct ak_unk_opts created_at;  
  struct ak_unk_opts completed_at;  
};
struct ak_dec_TaskOptions_opts {
  void *host;
  struct ak_unk_opts self;  
  struct ak_unk_pool options;  
  struct ak_unk_opts max_duration;  
};
struct ak_dec_TaskOutput_opts {
  void *host;
  struct ak_unk_opts self;  
};
struct ak_dec_TaskDetailed_opts {
  void *host;
  struct ak_unk_opts self;  
  struct ak_unk_opts options;  
  struct ak_unk_pool options_options;  
  struct ak_unk_opts options_max_duration;  
  struct ak_unk_opts created_at;  
  struct ak_unk_opts submitted_at;  
  struct ak_unk_opts started_at;  
  struct ak_unk_opts ended_at;  
  struct ak_unk_opts pod_ttl;  
  struct ak_unk_opts output;  
  struct ak_unk_opts received_at;  
  struct ak_unk_opts acquired_at;  
  struct ak_unk_opts creation_to_end_duration;  
  struct ak_unk_opts processing_to_end_duration;  
  struct ak_unk_opts received_to_end_duration;  
  struct ak_unk_opts processed_at;  
  struct ak_unk_opts fetched_at;  
};
struct ak_dec_TaskSummary_opts {
  void *host;
  struct ak_unk_opts self;  
  struct ak_unk_opts options;  
  struct ak_unk_pool options_options;  
  struct ak_unk_opts options_max_duration;  
  struct ak_unk_opts created_at;  
};
struct ak_dec_Probe_opts {
  void *host;
  struct ak_unk_opts self;  
  struct ak_unk_opts body;  
};