ffi/poc/csharp/src/Corpus/Generated/Abi.cs


[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListMetricsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListMetricsResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_batches;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_MetricsBatch*, void> apply_batches;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_batches_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, double*, int, void> add_batches_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_batches_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, byte*, int, void> add_batches_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_batches_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_UploadResultDataMessage
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_UploadResultDataMessage
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_UploadResultDataMessage*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_DualResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_left;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_right;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_DualResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_DualResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Pair*, int, void> add_left;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Pair*, int, void> add_right;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkLeaf
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkLeaf
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkLeaf*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkInner
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkInner
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkInner*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkLeaf*, int, void> add_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkElement
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_labels;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_inner_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_inner_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkElement
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkElement*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_labels;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkElementAttrsEntry*, int, void> add_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_inner_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkLeaf*, int, void> add_inner_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_items;
    public ak_evt_ChunkElement* elem_items;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkedResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_items;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkElement*, void> apply_items;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_items_labels;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkElementAttrsEntry*, int, void> add_items_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_items_inner_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkLeaf*, int, void> add_items_inner_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkedResponseWide
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_items;
    public ak_evt_ChunkElement* elem_items;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkedResponseWide
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkedResponseWide*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_items;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkElement*, void> apply_items;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_items_labels;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkElementAttrsEntry*, int, void> add_items_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_items_inner_marks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ChunkLeaf*, int, void> add_items_inner_leaves;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_LeafElement
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_LeafElement
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_LeafElement*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_LeafResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_items;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_LeafResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_LeafResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_LeafElement*, int, void> add_items;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Surrogate
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_texts;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Surrogate
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Surrogate*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_SurrogateAttrsEntry*, int, void> add_attrs;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_texts;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_SurrogateInner
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_SurrogateInner
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_SurrogateInner*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_WireZoo
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_WireZoo
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_WireZoo*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskOptionsOptionsEntry
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskOptionsOptionsEntry
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskOptionsOptionsEntry*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ChunkElementAttrsEntry
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ChunkElementAttrsEntry
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ChunkElementAttrsEntry*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_SurrogateAttrsEntry
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_SurrogateAttrsEntry
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_SurrogateAttrsEntry*, void> apply;
}

/// Decision 11: Timestamp's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Timestamp_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: Duration's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Duration_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: ResultRaw's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ResultRaw_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts created_at;
    public ak_unk_opts completed_at;
}

/// Decision 11: TaskOptions's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_TaskOptions_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool options;
    public ak_unk_opts max_duration;
}

/// Decision 11: TaskOutput's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_TaskOutput_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: TaskDetailed's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_TaskDetailed_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts options;
    public ak_unk_pool options_options;
    public ak_unk_opts options_max_duration;
    public ak_unk_opts created_at;
    public ak_unk_opts submitted_at;
    public ak_unk_opts started_at;
    public ak_unk_opts ended_at;
    public ak_unk_opts pod_ttl;
    public ak_unk_opts output;
    public ak_unk_opts received_at;
    public ak_unk_opts acquired_at;
    public ak_unk_opts creation_to_end_duration;
    public ak_unk_opts processing_to_end_duration;
    public ak_unk_opts received_to_end_duration;
    public ak_unk_opts processed_at;
    public ak_unk_opts fetched_at;
}

/// Decision 11: TaskSummary's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_TaskSummary_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts options;
    public ak_unk_pool options_options;
    public ak_unk_opts options_max_duration;
    public ak_unk_opts created_at;
}

/// Decision 11: Probe's unknown-field configuration, read IN PLACE by the core from the
/// reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Probe_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts body;
}
